# vminer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
backends/dumb_dump/: Cargo.toml
backends/kvm/: Cargo.toml
exec/: Cargo.toml
exec/src/: addr.rs  dumb_dump.rs  kvm.rs  main.rs
exec/src/os/: linux.rs  mod.rs  windows.rs
icebox/: Cargo.toml
icebox-core/: Cargo.toml
icebox-core/src/: addr.rs  backend.rs  endian.rs  error.rs  lib.rs  mem.rs  os.rs  utils.rs
icebox-core/src/arch/: aarch64.rs  mod.rs  runtime.rs  x86_64.rs
icebox-core/src/symbols/: mod.rs  symbols_file.rs
icebox-core/src/symbols/dwarf/: mod.rs  read.rs  relocations.rs
icebox-core/src/symbols/pdb/: mod.rs
icebox/src/: lib.rs  main.rs  utils.rs
icebox/src/backends/: mod.rs
icebox/src/backends/kvm/: aarch64.rs  mod.rs  ptrace.rs  x86_64.rs
icebox/src/backends/kvm_dump/: mod.rs
icebox/src/core/: addr.rs  backend.rs  error.rs  mem.rs  mod.rs  os.rs  symbols.rs
icebox/src/core/arch/: aarch64.rs  mod.rs  runtime.rs  x86_64.rs
icebox/src/os/: mod.rs  pointer.rs
icebox/src/os/linux/: callstack.rs  mod.rs  process.rs  profile.rs
icebox/src/os/windows/: callstack.rs  loader.rs  memory.rs  mod.rs  profile.rs
icebox/src/symbols/dwarf/: mod.rs  read.rs
icebox/tests/: linux.rs
icebox/tests/results/: linux-aarch64-callstack.json  linux-aarch64-proc-tree.json  linux-aarch64-vmas.json  linux-callstack.json  linux-proc-tree.json  linux-x86_64-callstack.json  linux-x86_64-vmas.json
icebox_backend_dumb_dump/: Cargo.toml
icebox_backend_dumb_dump/src/: lib.rs
icebox_backend_kvm/: Cargo.toml
icebox_backend_kvm/src/: lib.rs
icebox_core/: Cargo.toml
icebox_core/src/: addr.rs  backend.rs  error.rs  lib.rs  os.rs  symbols.rs
icebox_dwarf/: Cargo.toml
icebox_dwarf/src/: lib.rs  read.rs
icebox_os_linux/: Cargo.toml
icebox_os_linux/src/: lib.rs
kvm/: Cargo.toml
kvm-common/: Cargo.toml
kvm-common/src/: lib.rs  x86_64.rs
kvm_dump_live/: Cargo.toml
kvm_dump_live/src/: main.rs
kvm_patch/: Cargo.toml
kvm_patch/src/: lib.rs
looper/: Cargo.toml
looper/src/: main.rs
native/: Cargo.toml  build.rs  cbindgen.toml  icebox.c  icebox.h  vminer.c  vminer.h
native/src/: allocator.rs  arch.rs  array.rs  backend.rs  cstring.rs  error.rs  lib.rs  logging.rs  os.rs  symbols.rs
os/linux/: Cargo.toml
os/linux/src/: lib.rs  profile.rs
patch/: Cargo.toml
patch/src/: aarch64.rs  kvm.rs  lib.rs  x86_64.rs
phys_addr/: Cargo.toml
python/: Cargo.toml
python/src/: lib.rs
read_dwarf/: Cargo.toml
read_dwarf/src/: main.rs  read.rs
src/: lib.rs
src/backends/: mod.rs
src/backends/kvm/: mod.rs
src/backends/kvm_dump/: mod.rs
src/core/: addr.rs  backend.rs  os.rs  symbols.rs
src/kvm_common/: mod.rs  x86_64.rs
src/os/linux/: mod.rs
src/symbols/dwarf/: read.rs
vminer/: Cargo.toml
vminer-core/: Cargo.toml
vminer-core/src/: addr.rs  backend.rs  endian.rs  error.rs  lib.rs  os.rs  utils.rs
vminer-core/src/arch/: aarch64.rs  mod.rs  riscv64.rs  runtime.rs  x86_64.rs
vminer-core/src/symbols/: mod.rs  symbols_file.rs
vminer-core/src/symbols/dwarf/: mod.rs  relocations.rs
vminer-core/src/symbols/pdb/: mod.rs
vminer/src/: lib.rs
vminer/src/backends/: mod.rs
vminer/src/backends/kvm/: aarch64.rs  mod.rs  ptrace.rs  riscv64.rs  x86_64.rs
vminer/src/backends/kvm_dump/: mod.rs
vminer/src/os/: mod.rs  pointer.rs
vminer/src/os/linux/: callstack.rs  mod.rs  profile.rs
vminer/src/os/windows/: callstack.rs  loader.rs  memory.rs  mod.rs  profile.rs
vminer/tests/: linux.rs
