[workspace]
resolver = "2"
members = ["bin/force_mmap", "bin/kvm_dump_live", "icebox", "icebox-core", "native", "kvm_patch", "python"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
ibc = { package = "icebox-core", path = "icebox-core", default-features = false }
icebox = { path = "icebox", default-features = false }

bytemuck = "1.7"
clap = "4.10"
env_logger = "0.11"
gimli = { version = "0.31", default-features = false }
hashbrown = "0.15"
libc = "0.2.94"
log = "0.4"
memchr = { version = "2.4", default-features = false }
object = { version = "0.36", default-features = false }
once_cell = { version = "1.9", default-features = false }
once_map = { version = "0.4.7", default-features = false }
pdb = { version = "0.8", default-features = false }
serde = "1.0"
spin = { version = "0.9.2", default-features = false }
sync_file = "0.2.6"

[profile.dev]
opt-level = 1

[profile.release]
debug = 1
lto = "thin"
