[package]
name = "exec"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"
anyhow = "1.0"
bytemuck = { version = "1.7", features = ["derive"]}
kvm-common = {path = "../kvm-common", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
memchr = {version = "2.4", default-features = false}