[package]
name = "icebox-core"
version = "0.1.0"
edition = "2021"

[features]
std = ["gimli/std", "object/std", "dep:sync_file", "dep:cpp_demangle", "dep:msvc-demangler", "dep:pdb"]

[dependencies]
bytemuck = {version = "1.7", features = ["derive"]}
hashbrown = "0.11"
memchr = {version = "2.4", default-features = false}
log = "0.4"

serde = { version = "1.0", features = ["derive"], optional = true }

object = {version = "0.28", default-features = false, features = ["read_core", "elf"]}
gimli = {version = "0.26", default-features = false, features = ["read"]}
pdb = {version = "0.8", optional = true}

sync_file = {version = "0.2", optional = true}

# TODO: Always enable these once they work with no_std
cpp_demangle = {version = "0.3.5", optional = true}
msvc-demangler = {version = "0.9", optional = true}
rustc-demangle = {version = "0.1.21"}
