[package]
name = "icebox-core"
version = "0.1.0"
edition = "2021"

[features]
std = ["gimli/std", "object/std", "once_cell/std", "once_map/std", "dep:sync_file", "dep:cpp_demangle", "dep:msvc-demangler", "dep:pdb"]

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
hashbrown = "0.14"
memchr = { version = "2.4", default-features = false }
log = "0.4"
once_cell = { version = "1.9", default-features = false }
once_map = { version = "0.4", default-features = false, features = ["ahash"] }

serde = { version = "1.0", features = ["derive"], optional = true }

object = { version = "0.32", default-features = false, features = ["read_core", "elf"] }
gimli = { version = "0.28", default-features = false, features = ["read"] }
pdb = { version = "0.8", optional = true }

sync_file = { version = "0.2", optional = true }

# TODO: Always enable these once they work with no_std
cpp_demangle = { version = "0.4", optional = true }
msvc-demangler = { version = "0.9", optional = true }
rustc-demangle = { version = "0.1.21" }
