[package]
name = "icebox"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "all_os"]
std = ["ibc/std", "once_cell/std"]
serde = ["dep:serde", "ibc/serde"]

no_std_sync = ["spin"]

all_os = ["linux", "windows"]
linux = ["dep:gimli"]
windows = ["std", "dep:object", "dep:pdb"]

all_backends = ["kvm", "dump"]
kvm = ["std", "dep:libc"]
dump = ["std"]

[dependencies]
ibc = {package = "icebox-core", version = "0.1", path = "../icebox-core"}

serde = { version = "1.0", features = ["derive"], optional = true }

spin = {version = "0.9.2", optional = true, default-features = false, features = ["once"]}

bytemuck = {version = "1.7", features = ["derive"]}
hashbrown = "0.11"
libc = {version = "0.2.94", optional = true}
log = "0.4"
memchr = {version = "2.4", default-features = false}
once_cell = {version = "1.9", default-features = false}

object = {version = "0.28", default-features = false, features = ["read_core", "pe"], optional = true}
gimli = {version = "0.26", default-features = false, features = ["read"], optional = true}
pdb = {version = "0.7", default-features = false, optional = true}

[dev-dependencies]
serde_json = "1.0"

[[test]]
name = "linux"
required-features = ["dump", "linux", "serde"]
