[package]
name = "icebox"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
# default = ["std", "all_os"]
default = ["std", "all_os", "download_pdb"]
std = ["ibc/std", "once_cell/std"]
serde = ["dep:serde", "ibc/serde"]

no_std_sync = ["spin"]

all_os = ["linux", "windows"]
linux = ["dep:gimli"]
windows = ["std", "dep:object", "dep:pdb"]

all_backends = ["kvm", "dump"]
kvm = ["std", "dep:libc"]
dump = ["std"]

download_pdb = ["dep:ureq"]

[dependencies]
ibc = { workspace = true }

bytemuck = { workspace = true, features = ["derive"] }
gimli = { workspace = true, default-features = false, features = ["read"], optional = true }
hashbrown = { workspace = true }
libc = { workspace = true, optional = true }
log = { workspace = true }
memchr = { workspace = true, default-features = false }
object = { workspace = true, default-features = false, features = ["read_core", "pe"], optional = true }
once_cell = { workspace = true, default-features = false }
pdb = { workspace = true, default-features = false, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
spin = { workspace = true, optional = true, default-features = false, features = ["once"] }

ureq = { version = "2.4", optional = true }

[dev-dependencies]
serde_json = "1.0"

[[test]]
name = "linux"
required-features = ["dump", "linux", "serde"]
