[package]
name = "icebox_dwarf"
version = "0.1.0"
edition = "2018"

[dependencies]
ibc = {path = "../icebox_core", package = "icebox_core"}

gimli = {version = "0.25", default-features = false, features = ["read"]}
hashbrown = "0.11"
log = "0.4"
object = {version = "0.26", default-features = false, features = ["read_core", "elf"], optional = true}
