[package]
name = "kvm-common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.7", features = ["derive"]}
libc = "0.2"
serde = {version = "1.0", features = ["derive"], optional = true}
