[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["icebox/std", "icebox/all_backends", "icebox/windows", "dep:env_logger"]

custom_allocator = ["dep:spin"]

[dependencies]
icebox = {path = "../icebox", default-features = false, features = ["linux"]}
ibc = {package = "icebox-core", path = "../icebox-core"}

bytemuck = "1.9"
cty = "0.2.2"
spin = {version = "0.9", default-features = false, features = ["once"], optional = true}

log = "0.4"
env_logger = {version = "0.9", optional = true}

[build-dependencies]
cbindgen = {version = "0.24", default-features = false}
