[package]
name = "native"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["icebox/std", "icebox/all_backends", "icebox/windows", "dep:env_logger"]

custom_allocator = ["dep:spin"]

[dependencies]
icebox = { workspace = true, default-features = false, features = ["linux"] }
ibc = { workspace = true }

bytemuck = { workspace = true }
spin = { workspace = true, default-features = false, features = ["once"], optional = true }

log = { workspace = true }
env_logger = { version = "0.10", optional = true }

[build-dependencies]
cbindgen = { version = "0.26", default-features = false }
