[package]
name = "native"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["vminer/std", "vminer/all_backends", "vminer/windows", "dep:env_logger"]

custom_allocator = ["dep:spin"]

[dependencies]
vminer = { workspace = true, default-features = false, features = ["linux"] }
vminer-core = { workspace = true }

bytemuck = { workspace = true }
spin = { workspace = true, default-features = false, features = ["once"], optional = true }

log = { workspace = true }
env_logger = { workspace = true, optional = true }

[build-dependencies]
cbindgen = { version = "0.28", default-features = false }
