[package]
name = "icebox-python"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "iceboxa"
crate-type = ["cdylib"]

[dependencies]
ibc = { workspace = true }
icebox = { workspace = true, default-features = true, features = ["all_backends"] }

pyo3 = "0.20"
pyo3-log = "0.9"
log = "0.4"
