[package]
name = "vminer-python"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
vminer-core = { workspace = true }
vminer = { workspace = true, default-features = true, features = ["all_backends"] }

pyo3 = "0.23"
pyo3-log = "0.12"
log = "0.4"
