[package]
name = "read_dwarf"
version = "0.1.0"
edition = "2018"

[dependencies]
gimli = {version = "0.25", default-features = false, features = ["read", "fallible-iterator"]}
object = {version = "0.26", default-features = false, features = ["read_core", "elf", "compression"]}
fallible-iterator = {version = "0.2", default-features = false, features = ["std"]}
