[package]
name = "vminer-core"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Core library for vminer"
documentation = "https://docs.rs/vminer-core"
repository = "https://github.com/thalium/vminer"

[features]
std = ["gimli/std", "object/std", "once_cell/std", "once_map/std", "dep:sync_file", "cpp_demangle/std", "dep:pdb"]

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }
hashbrown = { workspace = true }
memchr = { workspace = true, default-features = false }
log = { workspace = true }
once_cell = { workspace = true, default-features = false }
once_map = { workspace = true, default-features = false, features = ["ahash"] }

serde = { workspace = true, features = ["derive"], optional = true }

object = { workspace = true, default-features = false, features = ["read_core", "elf"] }
gimli = { workspace = true, default-features = false, features = ["read"] }
pdb = { workspace = true, optional = true }

sync_file = { version = "0.2", optional = true }

# TODO: Always enable these once they work with no_std
cpp_demangle = { version = "0.4", default-features = false, features = ["alloc"] }
msvc-demangler = { version = "0.11" }
rustc-demangle = { version = "0.1.21" }
